--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <string name="signUp">Sign Up</string>
 
+    <string name="title_have_space">Have space</string>
+    <string name="message_have_space">plz fill all space</string>
+    <string name="title_user_false">user false</string>
+    <string name="message_have_false">No this user in my database</string>
+    <string name="title_pass_false">password false</string>
+    <string name="message_pass_false">plz try again password False</string>
+
 </resources>
